--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -110,14 +110,6 @@ properties:
     label: Lifecycle stage
     description: The system lifecycle stage of the system
     fieldset: general
-  replacedBy:
-    type: System
-    direction: incoming
-    label: Replaced by systems
-    relationship: REPLACES
-    description: System(s) that do, or will, replace all or part of this system
-    hasMany: true
-    fieldset: general
   SF_ID:
     type: Word
     canFilter: true
@@ -268,7 +260,15 @@ properties:
     description: System(s) that are, or will be, replaced, at least in part, by this system
     hasMany: true
     fieldset: network
-fieldsets:
+  replacedBy:
+    type: System
+    direction: incoming
+    label: Replaced by systems
+    relationship: REPLACES
+    description: System(s) that do, or will, replace all or part of this system
+    hasMany: true
+    fieldset: network
+  fieldsets:
   general:
     heading: General information
   ownership:
