technical owner property

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -164,6 +164,14 @@ properties:
     description: Systems the person has responsibility for managing GDPR processes related to personal data
     hasMany: true
     fieldset: individual
+  technicalOwnerFor:
+    type: System
+    direction: incoming
+    label: Technical owner for systems
+    relationship: HAS_TECHNICAL_OWNER
+    description: Systems the person has technical responsibility for
+    hasMany: true
+    fieldset: individual
   stakeholderFor:
     type: System
     direction: incoming
