Ensure descriptions end in full stops.

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -161,7 +161,7 @@ properties:
     direction: incoming
     label: GDPR Data owner for systems
     relationship: HAS_DATA_OWNER
-    description: Systems the person has responsibility for managing GDPR processes related to personal data
+    description: Systems the person has responsibility for managing GDPR processes related to personal data.
     hasMany: true
     fieldset: individual
   technicalOwnerFor:
@@ -169,7 +169,7 @@ properties:
     direction: incoming
     label: Technical owner for systems
     relationship: HAS_TECHNICAL_OWNER
-    description: Systems the person has technical responsibility for
+    description: Systems the person has technical responsibility for.
     hasMany: true
     fieldset: individual
   stakeholderFor:
