--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
 		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
 		"lodash.uniqby": "^4.7.0",
-		"neo4j-driver": "~1.6.1",
-		"neo4j-graphql-js": "~0.1.28",
+		"neo4j-driver": "^1.6.1",
+		"neo4j-graphql-js": "^2.1.0",
 		"next-metrics": "^3.1.3",
 		"sinon": "^6.2.0",
 		"uuid": "^3.2.1"
