--- a/schema/types/Healthcheck.yaml
+++ b/schema/types/Healthcheck.yaml
@@ -1,6 +1,7 @@
 name: Healthcheck
 description: The configuration used to provide monitoring/healthchecks for a system.
 rank: 25
+creationURL: https://monitoring-manager.in.ft.com/add-healthcheck
 properties:
   code:
     type: Code
