--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - NEO4J_dbms_logs_query_enabled=true
       - NEO4J_AUTH=none
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
+      - NEO4J_db_temporal_timezone=Z
     ports:
       - "7474:7474"
       - "7473:7473"
@@ -14,3 +15,5 @@ services:
       - ./neo4j/data:/data
       - ./neo4j/plugins:/plugins
       - ./neo4j/logs:/logs
+
+
