--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"faker": "^4.1.0",
 		"husky": "^0.14.3",
 		"jest": "^23.6.0",
+		"jest-junit": "^5.2.0",
 		"nodemon": "^1.17.4",
 		"nyc": "^11.8.0",
 		"prettier": "~1.12.1",
