--- a/package.json
+++ b/package.json
@@ -13,23 +13,6 @@
 		"node": ">= 8.11.1",
 		"npm": ">= 5.6.0"
 	},
-	"scripts": {
-		"lint": "eslint --cache --fix .",
-		"lint-ci": "eslint .",
-		"init-db": "node -r dotenv/config server/init-db.js",
-		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
-		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
-		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
-		"precommit": "node_modules/.bin/secret-squirrel",
-		"commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-		"test:load:run": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && artillery run scripts/load-testing/$TEST_NAME.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down",
-		"test:load:generateData": "node scripts/load-testing/lib/generate/index.js",
-		"test:load:readQueries": "TEST_NAME=readQueries npm run test:load:run",
-		"test:load:writeQueriesForGroups": "TEST_NAME=writeQueriesForGroups npm run test:load:run && node scripts/load-testing/clean-up.js",
-		"test:load:writeQueriesForSystems": "TEST_NAME=writeQueriesForSystems npm run test:load:run && node scripts/load-testing/clean-up.js",
-		"test:load:writeQueriesForTeams": "TEST_NAME=writeQueriesForTeams npm run test:load:run && node scripts/load-testing/clean-up.js",
-		"test:load:cleanUp": "node scripts/load-testing/clean-up.js"
-	},
 	"nyc": {
 		"exclude": [
 			"**/test/**",
@@ -64,42 +47,36 @@
 		"body-parser": "^1.18.3",
 		"common-tags": "^1.7.2",
 		"connect-timeout": "^1.9.0",
-		"date-fns": "^1.29.0",
 		"express": "^4.16.3",
 		"express-async-errors": "^3.0.0",
 		"graphql": "^0.13.2",
 		"graphql-server-express": "^1.4.0",
 		"graphql-tools": "^3.0.1",
 		"http-errors": "^1.6.3",
-		"isomorphic-fetch": "^2.2.1",
-		"js-yaml": "^3.12.0",
 		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
 		"lodash.uniqby": "^4.7.0",
 		"neo4j-driver": "^1.6.1",
 		"neo4j-graphql-js": "^2.1.0",
 		"next-metrics": "^3.1.3",
-		"sinon": "^6.3.5",
+		"node-fetch": "^2.3.0",
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
-		"@financial-times/secret-squirrel": "^2.8.0",
+		"@financial-times/rel-engage": "5.1.0-beta.5",
 		"artillery": "^1.6.0-22",
 		"artillery-plugin-statsd": "^2.2.0",
 		"casual": "^1.5.19",
+		"chai": "^4.2.0",
 		"dotenv": "^6.0.0",
-		"eslint": "^4.19.1",
-		"eslint-config-origami-component": "^1.0.0",
-		"eslint-config-prettier": "~2.9.0",
-		"eslint-plugin-prettier": "~2.6.1",
 		"faker": "^4.1.0",
-		"husky": "^0.14.3",
 		"jest": "^23.6.0",
 		"jest-junit": "^5.2.0",
+		"lolex": "^3.0.0",
 		"nodemon": "^1.17.4",
 		"nyc": "^11.8.0",
-		"prettier": "~1.12.1",
 		"proxyquire": "^2.0.1",
+		"sinon": "^6.3.5",
 		"sinon-chai": "^3.0.0",
 		"supertest": "^3.1.0"
 	}
