--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
-		"@financial-times/rel-engage": "5.1.0-beta.5",
+		"@financial-times/rel-engage": "^5.1.0-beta.5",
 		"artillery": "^1.6.0-22",
 		"artillery-plugin-statsd": "^2.2.0",
 		"casual": "^1.5.19",
