formatting errors corrected as per tests

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -118,6 +118,7 @@ CookieType:
     - Third Party
 CookiePurpose:
   description: ICC cookie classification type
+  options:
     - Strictly Necessary
     - Performance
     - Functionality
