--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -5,8 +5,7 @@ properties:
   code:
     type: Code
     label: Code
-    description: |
-        Unique code/id for this cookie. 
+    description: Unique code/id for this cookie. 
     canIdentify: true
     required: true
     unique: true
@@ -32,9 +31,9 @@ properties:
     canFilter: true
     fieldset: main
   
-  purpose:
+  classification:
     type: CookiePurpose
-    label: Purpose
+    label: ICC Classification
     description: ICC classification of cookie.
     required: true
     isCore: true
@@ -51,18 +50,18 @@ properties:
 
   provider:
     type: Word
-    label: Purpose
-    description: ICC classification of cookie.
+    label: Provider
+    description: Team/person or provider who set the cookie. 
     required: true
     isCore: true
     canFilter: true
     fieldset: main
 
-  hasComplianceDataOf:
-    type: ComplianceData
-    label: Compliance Data for cookie by domain
-    relationship: HAS_COMPLIANCE_DATA_OF
-    description: The cookies compliance data attached to product by ComplianceData type.
+  hasCookieInstanceOf:
+    type: CookieInstances
+    label: Cookie instance data
+    relationship: IS_SET_AS
+    description: The cookie instance data attached to product by CookieInstance type.
     direction: outgoing 
 
 fieldsets:
